<resources>
    <string name="title_announcements">Объявления</string>
    <string name="announcements_date">Дата публикации: </string>
    <string name="announcements_waste_types">Типы отходов: </string>
    <string name="announcements_contact">Связаться: </string>
    <string name="announcements_tab_sell">Продается</string>
    <string name="announcements_tab_buy">Покупается</string>
    <string name="announcement_creator_title">Заголовок, кратко опишите что вы хотите купить или продать (до 50 символов)</string>
    <string name="announcement_creator_description">Описание, опишите что вы хотите купить или продать более подробно (до 10 000 символов)</string>
    <string name="announcement_creator_waste_type">Выберите нужный тип отходов (выбранные очерчены по периметру)</string>
    <string name="announcement_creator_contact">Связь, укажите хотя бы один способ связаться с вами</string>
    <string name="announcement_creator_success">Объявление создано</string>
    <string name="announcement_creator_error">Вы не можете публиковать объявления, так как на ваши объявления было слишком много жалоб</string>
    <string name="announcement_creator_rbutt_buy">Купить</string>
    <string name="announcement_creator_rbutt_sell">Продать</string>
    <string name="announcement_creator_butt_paste_email">Вставить почту из Google аккаунта</string>
    <string name="announcement_creator_butt_create">Создать</string>
    <string name="announcement_creator_hint_title">Заголовок</string>
    <string name="announcement_creator_hint_description">Описание</string>
    <string name="announcement_creator_hint_email">Электронная почта</string>
    <string name="announcement_creator_hint_vk">Ссылка на аккаунт ВКонтакте</string>
    <string name="announcement_creator_hint_tg">Ссылка на аккаунт Telegram</string>
    <string name="announcement_creator_hint_tel">Номер телефона</string>
    <string name="announcement_creator_def_units">руб/кг</string>
    <string name="announcement_creator_error_title">Нет заголовка</string>
    <string name="announcement_creator_error_description">Нет описания</string>
    <string name="announcement_viewer_report_message">Укажите причину жалобы</string>
    <string name="announcement_viewer_butt_report">Пожаловаться</string>
    <string name="announcement_viewer_butt_ok">Ок</string>
    <string name="announcement_viewer_butt_cancel">Отмена</string>
    <string name="title_authorization">AuthorizationActivity</string>
    <string name="auth_birth">Когда у тебя день рождения?</string>
    <string name="auth_hi">Привет!</string>
    <string name="auth_welcome">Давай знакомиться! \n Меня зовут Тюлень. \nА тебя?</string>
    <string name="auth_name">Как тебя зовут?</string>
    <string name="auth_city">Из какого ты города?</string>
    <string name="auth_skill">Как давно ты занимаешься раздельным сбором отходов?</string>
    <string name="auth_confirmation">Нажимая кнопку \"Далее\", вы соглашаетесь с</string>
    <string name="auth_local_data">Данные в памяти устройства:</string>
    <string name="auth_cloud_data">Данные в облачном хранилище:</string>
    <string name="auth_data_level">уровень</string>
    <string name="auth_data_garbage_counter">сдачи</string>
    <string name="auth_data_bonuses">бонусы</string>
    <string name="auth_rbutt_newman">Я новичок</string>
    <string name="auth_rbutt_adultman">Я продвинутый</string>
    <string name="auth_rbutt_proman">Я профи</string>
    <string name="auth_rbutt_newman_full">Я новичок (в первый раз занимаюсь раздельным сбором отходов)</string>
    <string name="auth_rbutt_adultman_full">Я продвинутый (уже занимался раздельным сбором отходов)</string>
    <string name="auth_rbutt_proman_full">Я профи (занимаюсь раздельным сбором отходов несколько лет)</string>
    <string name="auth_butt_start">Далее</string>
    <string name="auth_butt_back">Назад</string>
    <string name="auth_butt_sign_in">Войти с помощью Google</string>
    <string name="auth_butt_skip">Пропустить</string>
    <string name="auth_hint_name">Имя</string>
    <string name="auth_hint_city">Город</string>
    <string name="auth_error_date">Неверная дата</string>
    <string name="edit_user_name">Имя</string>
    <string name="edit_user_city">Город</string>
    <string name="edit_user_email">Почта</string>
    <string name="edit_user_butt_save">Сохранить</string>
    <string name="edit_user_butt_back">Назад</string>
    <string name="edit_user_butt_delete_account">Удалить профиль</string>
    <string name="edit_user_butt_sign_out">Выход</string>
    <string name="edit_user_butt_sign_in">Войти</string>
    <string name="choose_data_question">С какими данными вы хотите продолжить?</string>
    <string name="choose_data_butt_local">Память</string>
    <string name="choose_data_butt_cloud">Облако</string>
    <string name="delete_confirmation_question">вы уверенны, что хотите удалить профиль?</string>
    <string name="delete_confirmation_butt_no">Нет</string>
    <string name="delete_confirmation_butt_yes">Да</string>
    <string name="learning_title_QA">Полезные советы и ответы</string>
    <string name="learning_butt_pl_prep">Как подготовить пластиковую бутылку к сдаче</string>
    <string name="learning_butt_pl_marks">Виды маркировок пластика и что они означают</string>
    <string name="learning_butt_pl_wrong">Какой пластик не подлежит переработке</string>
    <string name="learning_butt_gl_prep">Как подготовить стеклянную тару к сдаче</string>
    <string name="learning_butt_zw">Как начать жить по принципу zero waste</string>
    <string name="map_butt_container">Контейнеры</string>
    <string name="map_butt_points">Пункты с людьми</string>
    <string name="map_butt_plastic">Пластик</string>
    <string name="map_butt_glass">Стекло</string>
    <string name="map_butt_metal">Металл</string>
    <string name="map_butt_paper">Бумага</string>
    <string name="map_butt_food">Пищевые отходы</string>
    <string name="map_butt_battery">Батарейки</string>
    <string name="main_error_navigation">Выберите точку, куда хотите отправиться</string>
    <string name="title_my_announcements">Мои объявления</string>
    <string name="my_announcements_publish">Опубликовано </string>
    <string name="my_announcements_at"> в </string>
    <string name="my_announcement_sell">Продам</string>
    <string name="my_announcement_buy">Куплю</string>
    <string name="my_announcement_deleted">Объявление удалено, чтобы обновить список, потяните вниз</string>
    <string name="my_announcements_tab_active">Активные</string>
    <string name="my_announcements_tab_blocked">Заблокированные</string>
    <string name="my_announcements_butt_create">Создать объявление</string>
    <string name="personal_area_butt_parameters">Параметры</string>
    <string name="personal_area_butt_lvl">Уровень</string>
    <string name="personal_area_butt_rating">Рейтинг</string>
    <string name="personal_area_butt_tg_bot">Telegram бот</string>
    <string name="personal_area_butt_login">Войти</string>
    <string name="personal_area_error_my_announcements">Вы не вошли в аккаунт, для продолжения необходимо войти</string>
    <string name="myAlphaNumeric">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNMЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЮБЬТИМСЧЯ йцукенгшщзхъэждлорпавыфячсмитьбю-</string>
    <string name="error_name">Введите имя</string>
    <string name="error_city_not_found">Извините, Мы ещё не работаем в вашем городе. Попробуйте выбрать ближайший крупный город</string>
    <string name="success">Успешно</string>
    <string name="fail">Что-то пошло не так</string>
    <string name="app_name">EcoPoint</string>
    <string name="title_learning">Инфо</string>
    <string name="title_map">Карта</string>
    <string name="title_personal_area">Личный кабинет</string>
    <string name="title_view">Посмотреть</string>
    <string name="title_edit">Изменить</string>
    <string name="title_delete">Удалить</string>
    <string-array name="Cities">
        <item>Пермь</item>
        <item>Казань</item>
        <item>Новосибирск</item>
    </string-array>
    <string-array name="Months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>
    <string name="prep_pl_first">тщательно помыть бутылку</string>
    <string name="prep_pl_second">снять этикетку</string>
    <string name="prep_pl_third">снять крышку с кольцом</string>
    <string name="prep_pl_fourth">смять бутылку</string>
    <string name="prep_pl_fifth">отнести бутылку в пункт сдачи отходов</string>
    <string name="prep_pl_text_first">Необязательно мыть бутылку с моющим средством до блеска. Достаточно удалить остатки напитков, пищи и жира — так, чтобы они не присохли к пластику. И, конечно, не стоит сдавать в переработку бутылку с недопитым содержимым</string>
    <string name="prep_pl_text_second">Этот шаг необходим, если этикетка термоусадочная (полностью обтягивает бутылку). Этикетки стандартной формы — узкие и опоясывающие бутылку — снимать не нужно</string>
    <string name="prep_pl_text_third">Крышки сделаны из пластика, отличного от материала бутылки, и вместе их переработать нельзя. Крышки можно оставлять на бутылках при сдаче на переработку, а можно собирать отдельно и сдавать  в проекты, собирающие исключительно крышки</string>
    <string name="prep_pl_text_fourth">Сомните бутылку, чтобы она занимала меньше места и сборщикам вторсырья не пришлось "возить воздух”</string>
    <string name="prep_pl_text_fifth">Сверьтесь с маркировкой пластика в треугольнике и отнесите в пункт сдачи отходов с соответствующей фракцией</string>
    <string name="pl_mark_1">ПЭТ, PETE</string>
    <string name="pl_mark_2">ПНД, HDPE</string>
    <string name="pl_mark_3">ПВХ, PVC</string>
    <string name="pl_mark_4">ПВД, LDPE</string>
    <string name="pl_mark_5">ПП, PP</string>
    <string name="pl_mark_6">PS</string>
    <string name="pl_mark_7">O, Other</string>
    <string name="pl_mark_extended_1">полиэтилентерефталат</string>
    <string name="pl_mark_extended_2">полиэтилен высокой плотности</string>
    <string name="pl_mark_extended_3">поливинилхлорид</string>
    <string name="pl_mark_extended_4">полиэтилен высокого давления</string>
    <string name="pl_mark_extended_5">полипропилен</string>
    <string name="pl_mark_extended_6">полистирол</string>
    <string name="pl_mark_extended_7">весь остальной пластик</string>
    <string name="pl_mark_description_1">ПЭТ-упаковка бывает трёх видов:</string>
    <string name="pl_mark_description_2">Прозрачные пакеты, одноразовая посуда, канистры, тазы, крышки от бутылок, бутыльки для косметики, детские игрушки</string>
    <string name="pl_mark_description_3">Применяется для электроизоляции проводов и кабелей, производства листов, труб, плёнок для натяжных потолков, «виниловых» грампластинок, искусственных кож,  линолеума и т. д.</string>
    <string name="pl_mark_description_4">В основном из этого материала производят пленку разных видов и отрывные крышки от 20-литровых бутылок</string>
    <string name="pl_mark_description_5">Из полипропилена производят автомобильные бамперы, внутреннюю отделку автомобилей, корпуса электроинструмента, упаковку из-под шоколадок, пакеты для риса, макарон и хлеба, пластиковые стаканчики для чая и йогуртов, крышки для банок и бутылок.</string>
    <string name="pl_mark_description_6">Одноразовая посуда, подложка для овощей и фруктов, пенопласт, видеокассеты</string>
    <string name="upd_skip">Пропустить</string>
    <string name="upd_load">Установить</string>
    <string name="upd_text_description">Если обновление пропустить, то приложение может работать нестабильно</string>
    <string name="upd_text_title">Появилась свежая версия приложения!</string>
</resources>