<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">

    <fragment
        android:id="@+id/navigation_learning"
        android:name="eco.point.ecopoint.ui.fragments.learning.LearningFragment"
        android:label="@string/title_learning"
        tools:layout="@layout/fragment_learning" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="eco.point.ecopoint.ui.fragments.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_personal_area"
        android:name="eco.point.ecopoint.ui.fragments.personalArea.PersonalAreaFragment"
        android:label="@string/title_personal_area"
        tools:layout="@layout/fragment_personal_area" />
</navigation>